<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_7sdp"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:orientation="vertical"
    app:cardBackgroundColor="#fff"
    app:cardCornerRadius="@dimen/_2sdp">

    <LinearLayout
        style="@style/padding_top_14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="0dp">

            <LinearLayout
                android:id="@+id/llOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/summary_high_res"
                    app:tint="@color/colorBlack" />

                <TextView
                    style="@style/black_regular_12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/summary" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_group"
                    app:tint="@color/colorBlack" />

                <TextView
                    style="@style/black_regular_12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/patients" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/health_plus_icon"
                    app:tint="@color/colorBlack" />

                <TextView
                    style="@style/black_regular_12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/health_info" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="horizontal"
            android:padding="2dp">

            <LinearLayout
                android:id="@+id/llFourth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight=".3"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="RtlCompat">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_phone"
                    app:tint="@color/colorBlack" />

                <TextView
                    style="@style/black_regular_12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/support" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llFifth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_weight=".4"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="RtlCompat">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_app_more"
                    app:tint="@color/colorBlack" />

                <TextView
                    style="@style/black_regular_12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faq" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSixth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_weight=".3"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="RtlCompat">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/account_user_colorless"
                    app:tint="@color/colorBlack" />

                <TextView
                    style="@style/black_regular_12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_account" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>